# omr-ntt

./: .gitignore  Cargo.toml
benches/: extern_ntt.rs  ntt_bench_n.rs  ntt_bench_s.rs  partial_ntt_sweep_fields.rs  partial_ntt_sweep_s.rs
benches/common/: mod.rs
crates/bench/: Cargo.toml
crates/bench/benches/: extern_ntt.rs  ntt_bench_n.rs  ntt_bench_s.rs  partial_ntt_sweep_fields.rs  partial_ntt_sweep_s.rs
crates/bench/src/: lib.rs
crates/ntt/: Cargo.toml
crates/ntt/src/: decode.rs  encoder.rs  fields.rs  lib.rs
crates/ntt/src/encoders/: ark_radix2.rs  ark_transforms_radix2_rec.rs  dft.rs  fft3w.rs  lambdaworks_bowers.rs  lambdaworks_radix4.rs  mod.rs  naive.rs  plonky3_radix2_dit_parallel.rs  plonky3_radix2_layer_split.rs  tfhe_stockham_radix8.rs  transform_decomposition.rs  transform_decomposition_v2.rs  transpose_out_of_place.rs  utils.rs  winterfell_four_step.rs  winterfell_four_step_partial.rs  winterfell_split_radix.rs
examples/: profile_ntt.rs
scripts/: load_criterion.py  plot_per_n.py  plot_scaling.py
src/: lib.rs
src/encoders/: dft.rs  lambdaworks_bowers.rs  lambdaworks_radix4.rs  mod.rs  transform_decomposition_v2.rs  transpose_out_of_place.rs
