[package]
name = "bench"
version.workspace = true
edition.workspace = true
description = "Criterion benchmarks and CSV sweep runner for NTT encoders."

[dependencies]
ntt.workspace = true
ark-ff.workspace = true
ark-std.workspace = true
rand.workspace = true
[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = ["rayon", "html_reports"] }

[[bench]]
name = "ntt_bench_n"
harness = false

[[bench]]
name = "ntt_bench_s"
harness = false
