[package]
name = "bench"
version.workspace = true
edition.workspace = true
description = "Criterion benchmarks and CSV sweep runner for NTT encoders."

[dependencies]
ntt.workspace = true
ark-ff.workspace = true
ark-std.workspace = true
rand.workspace = true
criterion = { version = "0.8", default-features = false, features = ["rayon", "html_reports"] }
tfhe-ntt = { git = "https://github.com/zama-ai/tfhe-rs", package = "tfhe-ntt" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3", package = "p3-dft", features = ["parallel"] }
p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3", package = "p3-goldilocks" }
winter-math = { git = "https://github.com/facebook/winterfell", package = "winter-math", features = ["concurrent"] }
rustfft = { git = "https://github.com/ejmahler/rustfft" }
oxifft  = { git = "https://github.com/cool-japan/oxifft", package = "oxifft", features = ["pruned"] }


[[bench]]
name = "ntt_bench_n"
harness = false

[[bench]]
name = "ntt_bench_s"
harness = false

[[bench]]
name = "extern_ntt"
harness = false

