[package]
name = "ntt"
version.workspace = true
edition.workspace = true

[features]
default = ["babybear"]
babybear   = []
koalabear  = []
goldilocks = []
teddybear  = []

[dependencies]
ark-ff.workspace = true
ark-poly.workspace = true
rayon.workspace = true

[dev-dependencies]
ark-std.workspace = true
rand.workspace = true
